fixed spacing for mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ html {
   background: url('https://i.stack.imgur.com/otJN0.png') repeat-x bottom; 
 }
 
-.hvr-grow-shadow {
+.nav-grow-shadow {
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: translateZ(0);
@@ -24,10 +24,10 @@ html {
   transition-property: text-shadow, transform;
 }
 
-.hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
+.nav-grow-shadow:hover, .nav-grow-shadow:focus, .nav-grow-shadow:active {
   text-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .mobile-sidebar {
